	Rewritten: iMSCP::SetRights library (usage of chown and chmod perl-functions instead of system commands)
	Rewritten: Servers::mta::postfix
	Rewritten: iMSCP::Crypt library

CONFIGS
	Added: cron package (Debian/Ubuntu)
	Added: libcrypt-rijndael-perl package (Debian/Ubuntu)
	Added: postfix-cdb package (Debian/Ubuntu)
	Changed: Usage of cdb maps instead of hash maps (Postfix)
	Removed: Unless lookup table templates (Postfix)
	Removed: Working directory (Postfix)

CONTRIB
	Updated: Listener::Postfix::Smarthost listener file - Usage of cdb map instead of hash map

FRONTEND
	Added: SMTP submission port in list of service ports
	Fixed: Possible ERR_INCOMPLETE_CHUNKED_ENCODING error due to wrong permissions on nginx tmp (fastcgi) directory
	Fixed: Wrong issue tracker links in admin/database_update.php
	Introduced: HSTS (HTTP Strict Transport Security) feature

INSTALLER
	Changed: Minimum PHP required PHP version is now 5.3.7
	Fixed: Avoid call of external commands whenever possible
	Fixed: The update notices are always shown even when they are out-dated

TESTS
	Added: Travis CI support for Unit testing (Perl only)
	Added: Unit tests for the following libraries:
	  - iMSCP::Crypt
	  - iMSCP::Dir
	  - iMSCP::EventManager
	  - iMSCP::Packages
	  - iMSCP::Servers
	  - iMSCP::SetRights libraries

YOUTRACK
	Fixed: #IP-1388 phptmp removed on client update
	Fixed: #IP-1393 Unable to disable backup feature for existing domains
	Fixed: #IP-1394 httpd-logs-mngr starts before mysql server on reboot
	Fixed: #IP-1395 Domain redirect feature - Missing URL path separator
	Fixed: #IP-1396 Deletion of a subdomain which has '/' as mount point deletes all web folders
	Fixed: #IP-1399 Add Auto-Submitted Header to Autoreply Emails
	Fixed: #IP-1401 Courier pop3/imap SSL don't work with some clients - Diffie-Hellman parameters length is too small
	Fixed: #IP-1410 Feature - Possibility to change redirection type
