@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <install>
+    <create_dir mode="0755" user="${ROOT_USER}" group="${ROOT_GROUP}">${ROOT_CONF}/logrotate.d</create_dir>
     <create_dir>${SYSTEM_CONF}/php-fpm/backup</create_dir>
     <create_dir>${SYSTEM_CONF}/php-fpm/working</create_dir>
     <copy_confdir>${SYSTEM_CONF}/php-fpm/parts</copy_confdir>
-    <copy_conffile>${SYSTEM_CONF}/php-fpm/logrotate.conf</copy_conffile>
+    <copy_conffile mode="0644" user="${ROOT_USER}" group="${ROOT_GROUP}">${ROOT_CONF}/logrotate.d/php5-fpm</copy_conffile>
     <copy_conffile>${SYSTEM_CONF}/php-fpm/php-fpm.conf</copy_conffile>
     <copy_conffile>${SYSTEM_CONF}/php-fpm/php_fpm_imscp.conf</copy_conffile>
     <copy_conffile>${SYSTEM_CONF}/php-fpm/php_fpm_imscp.load</copy_conffile>
