@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <install>
-    <create_dir>${ROOT_CONF}/init.d</create_dir>
+    <create_dir mode="0755" user="${ROOT_USER}" group="${ROOT_GROUP}">${ROOT_CONF}/init.d</create_dir>
     <create_dir>${SYSTEM_CONF}/init.d/backup</create_dir>
     <create_dir>${SYSTEM_CONF}/init.d/working</create_dir>
     <copy_conffile mode="0755" user="${ROOT_USER}" group="${ROOT_GROUP}">${ROOT_CONF}/init.d/courier-authdaemon</copy_conffile>
